# pg_hinted_id

./: .gitignore  Cargo.toml  README.md  hinted_id.control
sql/: load-order.txt
src/: hinted_id.rs  lib.rs  xid_tests.rs
src/xid_tests/: xid_ref.rs
