[package]
edition = "2018"
name = "hinted_id"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg10 = ["pgx/pg10", "pgx-tests/pg10"]
pg11 = ["pgx/pg11", "pgx-tests/pg11"]
pg12 = ["pgx/pg12", "pgx-tests/pg12"]
pg13 = ["pgx/pg13", "pgx-tests/pg13"]
pg_test = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pgx = {version = "0.1.21", default-features = false}
pgx-macros = "0.1.21"
serde = "1.0.126"
smartstring = {version = "0.2.7", features = ["serde"]}
xid = "1.0.0"

[dev-dependencies]
pgx-tests = "0.1.21"

[profile.dev]
panic = "unwind"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "unwind"
